match semantics of xml init script in yaml

--- a/generators/server/templates/app/src/main/resources/db/migration/liquibase/changelog/01-init.yaml
+++ b/generators/server/templates/app/src/main/resources/db/migration/liquibase/changelog/01-init.yaml
@@ -1,6 +1,2 @@
 # https://docs.liquibase.com/concepts/changelogs/yaml-format.html
-databaseChangeLog:
-  - changeSet:
-      author: author
-      id: 01-init
-      changes: []
+databaseChangeLog: []
