adds prometheus dependency when monitoring is selected

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=ERRO
 <%_ } _%>
 
 ################ Actuator #####################
-management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers,metrics
+management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
 
 ################ Database #####################
