--- a/generators/server/templates/app/src/main/resources/application-local.properties
+++ b/generators/server/templates/app/src/main/resources/application-local.properties
@@ -15,10 +15,7 @@ spring.datasource.password=secret
 
 <%_ if (features.includes('localstack')) { _%>
 ###AWS
-spring.cloud.aws.sqs.endpoint=http://localhost:4566
-spring.cloud.aws.sqs.region=us-east-1
-spring.cloud.aws.s3.endpoint=http://localhost:4566
-spring.cloud.aws.s3.region=us-east-1
+spring.cloud.aws.endpoint=http://localhost:4566
 
 spring.cloud.aws.credentials.access-key=noop
 spring.cloud.aws.credentials.secret-key=noop
