fixes issue with localstack in gradle project

--- a/generators/server/templates/gradle/gradle.properties
+++ b/generators/server/templates/gradle/gradle.properties
@@ -15,10 +15,4 @@ spring_dependency_management_version=<%= SPRING_DEP_MNGMNT_VERSION %>
 logstash_logback_encoder_version=<%= LOGSTASH_LOGBACK_ENCODER %>
 commons_io_version=<%= COMMONS_IO_VERSION %>
 springdoc_openapi_version=<%= SPRINGDOC_OPENAPI_VERSION %>
-testcontainers_version=<%= TEST_CONTAINERS_VERSION %>
-
-org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+testcontainers.version=<%= TEST_CONTAINERS_VERSION %>
