adds schema validation Test
https://vladmihalcea.com/validate-ddl-schema-spring-hibernate/ changes as per this

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.datasource.hikari.auto-commit=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
