removing properties which is default in Hibernate 6+

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -29,14 +29,13 @@ spring.datasource.hikari.auto-commit=false
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.properties.hibernate.id.optimizer.pooled.preferred=pooled-lo
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=25
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=true
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.query.plan_cache_max_size=4096
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 <%_ if (dbMigrationTool === 'flywaydb') { _%>
