--- a/generators/server/templates/app/config/prometheus/prometheus.yml
+++ b/generators/server/templates/app/config/prometheus/prometheus.yml
@@ -20,17 +20,21 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
 # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-- job_name: 'prometheus'
+  - job_name: 'prometheus'
 
-  # metrics_path defaults to '/metrics'
-  # scheme defaults to 'http'.
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+    static_configs:
+    - targets: ['localhost:9090', 'host.docker.internal:9090']
+      labels:
+        application: 'prometheus'
 
-  static_configs:
-  - targets: ['localhost:9090']
+  - job_name: '<%= appName %>'
 
-- job_name: '<%= appName %>'
-
-  metrics_path: '/actuator/prometheus'
-  scrape_interval: 5s
-  static_configs:
-  - targets: ['<%= appName %>:8080']
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    static_configs:
+    - targets: ['<%= appName %>:8080', 'host.docker.internal:8080' ]
+      labels:
+        application: '<%= appName %>'
+        
