--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -3,47 +3,32 @@ server.port=8080
 server.shutdown=graceful
 spring.main.allow-bean-definition-overriding=true
 spring.jmx.enabled=false
-
-################ Logging #####################
-logging.file.name=logs/<%= appName %>.log
-logging.level.web=INFO
-logging.level.sql=INFO
-## To enable transaction details logging
-#logging.level.org.springframework.orm.jpa=DEBUG
-#logging.level.org.springframework.transaction=DEBUG
-#logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
-<%_ if (features.includes('localstack')) { _%>
-logging.level.com.amazonaws.util.EC2MetadataUtils=ERROR
-logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=ERROR
-<%_ } _%>
+spring.mvc.problemdetails.enabled=true
 
 ################ Actuator #####################
 management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
 
 ################ Database #####################
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.datasource.hikari.auto-commit=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.jpa.properties.hibernate.id.new_generator_mappings=true
-spring.jpa.properties.hibernate.id.optimizer.pooled.preferred=pooled-lo
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=25
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=true
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.query.plan_cache_max_size=4096
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 <%_ if (dbMigrationTool === 'flywaydb') { _%>
 spring.flyway.locations=classpath:/db/migration/{vendor}
 <%_ } _%>
-spring.mvc.problemdetails.enabled=true
-
  <%_ if (features.includes('elk')) { _%>
 application.logstash-host=localhost
  <%_ } _%>
