--- a/generators/server/templates/gradle/code-quality.gradle
+++ b/generators/server/templates/gradle/code-quality.gradle
@@ -26,12 +26,13 @@ jacocoTestReport {
     }
 
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
 jacocoTestCoverageVerification {
+    dependsOn ":integrationTest"
     executionData fileTree(project.buildDir.absolutePath).include("jacoco/*.exec")
     afterEvaluate {
         getClassDirectories().setFrom(files(classDirectories.files.collect {
@@ -42,7 +43,7 @@ jacocoTestCoverageVerification {
         rule {
             element = 'BUNDLE'
             limit {
-                counter = 'COMPLEXITY'
+                counter = 'LINE'
                 value = 'COVEREDRATIO'
                 minimum = new BigDecimal("${jacoco_min_coverage_required}")
             }
