--- a/generators/server/templates/gradle/settings.gradle
+++ b/generators/server/templates/gradle/settings.gradle
@@ -1,12 +1,15 @@
 pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
     plugins {
-        id 'org.springframework.boot' version "${spring_boot_version}"
-        id 'io.spring.dependency-management' version "${spring_dependency_management_version}"
-        id 'com.gorylenko.gradle-git-properties' version "${git_properties_plugin_version}"
-        id 'org.sonarqube' version "${sonar_plugin_version}"
+        id "org.springframework.boot" version "${spring_boot_version}"
+        id "io.spring.dependency-management" version "${spring_dependency_management_version}"
+        id "com.gorylenko.gradle-git-properties" version "${git_properties_plugin_version}"
+        id "org.sonarqube" version "${sonar_plugin_version}"
         id "com.github.ben-manes.versions" version "${benmanes_versions_plugin_version}"
-        id "com.github.sherter.google-java-format" version "${google_java_format_plugin_version}"
+        id "com.diffplug.spotless" version "${spotless_version}"
     }
 }
 
-rootProject.name = '<%= appName %>'
+rootProject.name = "<%= appName %>"
