set log file name
In the current setup of logback-spring.xml we are not setting the logfile name, hence we should set it using application.properties

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.jmx.enabled=false
 spring.mvc.problemdetails.enabled=true
 
+################ Logging #####################
+logging.file.name=logs/${spring.application.name}.log
+
 ################ Actuator #####################
 management.endpoints.web.exposure.include=configprops,env,health,info,logfile,loggers,metrics,prometheus
 management.endpoint.health.show-details=always
