--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,9 @@
 {
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
-      "config:base"
+      "config:base",
+      "schedule:earlyMondays"
     ],
     "includeForks": true,
-    "labels": ["dependencies"],
-    "packageRules": [
-      {
-        "updateTypes": ["minor", "patch", "pin", "digest"],
-        "automerge": true
-      }
-    ]
+    "labels": ["dependencies"]
   }
