--- a/generators/server/templates/gradle/gradle.properties
+++ b/generators/server/templates/gradle/gradle.properties
@@ -4,7 +4,7 @@ jacoco_plugin_version=<%= GRADLE_JACOCO_PLUGIN_VERSION %>
 sonar_plugin_version=<%= GRADLE_SONAR_PLUGIN_VERSION %>
 owasp_plugin_version=<%= GRADLE_OWASP_PLUGIN_VERSION %>
 benmanes_versions_plugin_version=<%= GRADLE_BENMANES_VERSIONS_PLUGIN_VERSION %>
-spotless_version=<%= SPOTLESS_PLUGIN_VERSION %>
+spotless_version=<%= GRADLE_SPOTLESS_PLUGIN_VERSION %>
 
 jacoco_min_coverage_required=<%= JACOCO_MIN_COVERAGE_REQUIRED %>
 
