switch base branch from main to v0.1.5

--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
       "schedule:earlyMondays"
     ],
     "includeForks": true,
+    "baseBranches": ["v0.1.5"]
     "labels": ["dependencies"]
   }
