--- a/generators/server/templates/app/docker/docker-compose-monitoring.yml
+++ b/generators/server/templates/app/docker/docker-compose-monitoring.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
 
   grafana:
-    image: grafana/grafana:10.1.4@sha256:29f39e23705d3ef653fa84ca3c01731e0771f1fedbd69ecb99868270cdeb0572
+    image: grafana/grafana:10.1.4
     extra_hosts: ['host.docker.internal:host-gateway']
     ports:
     - "3000:3000"
