--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,26 +26,21 @@ jobs:
       - name: Check if version changed
         id: version-check
         run: |
-          if [ "${GITHUB_REF#refs/heads/}" == "main" ]; then
-            previous_version=$(git show HEAD:package.json | jq -r .version)
-            current_version=$(jq -r .version package.json)
+          previous_version=$(git show HEAD:package.json | jq -r .version)
+          current_version=$(jq -r .version package.json)
   
-            if [ "$previous_version" != "$current_version" ]; then
-              echo "Version changed. Publishing..."
-              echo "::set-output name=version_changed::true"
-            else
-              echo "Version unchanged. Skipping publish."
-              echo "::set-output name=version_changed::false"
-            fi
+          if [ "$previous_version" != "$current_version" ]; then
+            echo "Version changed. Publishing..."
+            echo "::set-output name=version_changed::true"
           else
-            echo "Not on the main branch. Skipping publish."
+            echo "Version unchanged. Skipping publish."
             echo "::set-output name=version_changed::false"
           fi
       - name: Build package on version change
         if: steps.version-check.outputs.version_changed == 'true'
         run: npm run build
       - name: Publish package on version change
-        if: steps.version-check.outputs.version_changed == 'true'
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
