--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,21 +26,26 @@ jobs:
       - name: Check if version changed
         id: version-check
         run: |
-          previous_version=$(git show HEAD:package.json | jq -r .version)
-          current_version=$(jq -r .version package.json)
-  
-          if [ "$previous_version" != "$current_version" ]; then
-            echo "Version changed. Publishing..."
-            echo "::set-output name=version_changed::true"
+          if [ ${{ github.ref == 'refs/heads/main' }} ]; then
+            previous_version=$(git show HEAD:package.json | jq -r .version)
+            current_version=$(jq -r .version package.json)
+      
+            if [ "$previous_version" != "$current_version" ]; then
+              echo "Version changed. Publishing..."
+              echo "VERSION_CHANGED=true" >> $GITHUB_ENV
+            else
+              echo "Version unchanged. Skipping publish."
+              echo "VERSION_CHANGED=false" >> $GITHUB_ENV
+            fi
           else
-            echo "Version unchanged. Skipping publish."
-            echo "::set-output name=version_changed::false"
+            echo "Not on the main branch. Skipping publish."
+            echo "VERSION_CHANGED=false" >> $GITHUB_ENV
           fi
       - name: Build package on version change
-        if: steps.version-check.outputs.version_changed == 'true'
+        if: env.VERSION_CHANGED == 'true'
         run: npm run build
       - name: Publish package on version change
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: env.VERSION_CHANGED == 'true'
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
