--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -50,29 +50,30 @@ jobs:
 
   common-steps:
     runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+	timeout-minutes: 20
+	strategy:
+      fail-fast: false
+	steps:
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node_version }}
-
       - run: npm install
-
       - run: npm test
         env:
           CI: true
 
-  # Define separate jobs for each matrix combination
+# Define separate jobs for each matrix combination
   build-windows:
     needs: []
     strategy:
       matrix:
         os: [windows-latest]
         node_version: [16.x, 18.x, 20.x]
-    runs-on: ${{ matrix.os }}
     steps:
+	    - name: Checkout code
+        uses: actions/checkout@v4
       - name: Run common steps
         uses: ./.github/actions/common-steps
 
@@ -82,8 +83,9 @@ jobs:
       matrix:
         os: [macos-latest]
         node_version: [16.x, 18.x, 20.x]
-    runs-on: ${{ matrix.os }}
     steps:
+	    - name: Checkout code
+        uses: actions/checkout@v4
       - name: Run common steps
         uses: ./.github/actions/common-steps
 
@@ -93,7 +95,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node_version: [16.x, 18.x, 20.x]
-    runs-on: ${{ matrix.os }}
     steps:
+	    - name: Checkout code
+        uses: actions/checkout@v4
       - name: Run common steps
         uses: ./.github/actions/common-steps
