--- a/generators/server/templates/app/.github/workflows/gradle.yml
+++ b/generators/server/templates/app/.github/workflows/gradle.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Java <%= JAVA_VERSION %>
+      - name: Setup Java ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java }}
