adds ApplicationName to  connection-parameters

--- a/generators/server/templates/app/src/main/resources/application.properties
+++ b/generators/server/templates/app/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.data-source-properties.ApplicationName=${spring.application.name}
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
