--- a/generators/server/templates/maven/pom.xml
+++ b/generators/server/templates/maven/pom.xml
@@ -135,6 +135,12 @@
             <artifactId>flyway-mysql</artifactId>
         </dependency>
         <%_ } _%>
+        <%_ if (dbMigrationTool  === 'flywaydb' && (databaseType === 'postgresql')) { _%>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
+        <%_ } _%>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
