fix : issue with generating code using flyway +postgres

--- a/generators/server/templates/gradle/build.gradle
+++ b/generators/server/templates/gradle/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     <%_ if (dbMigrationTool  === "flywaydb" && (databaseType === "mysql" || databaseType === "mariadb")) { _%>
     implementation "org.flywaydb:flyway-mysql"
     <%_ } _%>
+    <%_ if (dbMigrationTool  === "flywaydb" && databaseType === "postgresql") { _%>
+    implementation 'org.flywaydb:flyway-database-postgresql'
+    <%_ } _%>
     <%_ if (dbMigrationTool === "liquibase") { _%>
     implementation "org.liquibase:liquibase-core"
     <%_ } _%>
