--- a/generators/server/templates/app/.github/workflows/maven.yml
+++ b/generators/server/templates/app/.github/workflows/maven.yml
@@ -14,10 +14,10 @@ jobs:
         distribution: [ 'temurin' ]
         java: [ '<%= JAVA_VERSION %>' ]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Setup Java <%= JAVA_VERSION %>
-        uses: actions/setup-java@v3
+      - name: Setup Java ${{ matrix.java }}
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
           distribution: ${{ matrix.distribution }}
