--- a/package.json
+++ b/package.json
@@ -31,15 +31,22 @@
     "chalk": "4.1.2",
     "lodash": "4.17.21",
     "shelljs": "0.9.2",
-    "yeoman-environment": "3.19.3",
-    "yeoman-generator": "5.10.0"
+    "yeoman-environment": "4.4.3",
+    "yeoman-generator": "7.5.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "11.0.4",
+    "@types/lodash": "4.14.200",
+    "@types/mocha": "10.0.7",
+    "@types/node": "20.8.9",
+    "@types/shelljs": "0.8.12",
+    "@types/yeoman-assert": "3.1.4",
+    "@types/yeoman-generator": "5.2.14",
     "chai": "5.2.0",
     "fs-extra": "11.3.0",
     "mocha": "10.8.2",
     "sinon": "17.0.1",
     "yeoman-assert": "3.1.1",
-    "yeoman-test": "6.3.0"
+    "yeoman-test": "10.1.0"
   }
 }
