--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
+    types: [closed]
+    branches:
+      - main
 
 jobs:
   build:
@@ -29,17 +33,22 @@ jobs:
       - run: npm test
         env:
           CI: true
-
   publish:
     name: Publish to NPM
     needs: build  # Wait for all build matrix jobs to complete successfully
-    if: github.ref == 'refs/heads/main'  # Only run on main branch
+    # Only run when:
+    # 1. The code is on the main branch
+    # 2. It's either a direct push or a merged PR
+    # 3. All 6 matrix checks have passed (enforced by 'needs: build')
+    if: |
+      (github.ref == 'refs/heads/main') && 
+      (github.event_name == 'push' || 
+       (github.event_name == 'pull_request' && github.event.pull_request.merged == true))
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for checking version changes
-      
       - name: Check for version change
         id: check_version
         run: |
@@ -48,13 +57,20 @@ jobs:
           
           # Determine previous commit on main branch
           git fetch origin main
-          PREV_COMMIT=$(git rev-parse HEAD^1)
+          
+          # For pull requests, use the base commit
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            PREV_COMMIT="${{ github.event.pull_request.base.sha }}"
+          else
+            # For direct pushes, use the parent commit
+            PREV_COMMIT=$(git rev-parse HEAD^1)
+          fi
           
           # Get package.json from the previous commit
-          git show $PREV_COMMIT:package.json > prev_package.json
+          git show $PREV_COMMIT:package.json > prev_package.json || echo "No previous package.json found"
           
           # Extract previous version
-          PREV_VERSION=$(node -p "require('./prev_package.json').version")
+          PREV_VERSION=$(node -p "require('./prev_package.json').version" 2>/dev/null || echo "0.0.0")
           
           echo "Current version: $CURRENT_VERSION"
           echo "Previous version: $PREV_VERSION"
